codigo analytics e download via bitly

--- a/apocalipse-ilustrado/download.html
+++ b/apocalipse-ilustrado/download.html
@@ -50,70 +50,70 @@
           <h1>Download</h1>
       <div class="row text-center">
         <div class="col-md-3 col-sm-12">
-           <a href="capitulo1/1.pdf" download class="bot-cap"> Capítulo 1  <i class="fas fa-download"></i></a> 
+           <a href="http://bit.ly/apocalipse-ilustrado-cap-01" target=pdf class="bot-cap"> Capítulo 1  <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="capitulo2/2.pdf" download class="bot-cap">Capítulo 2 <i class="fas fa-download"></i></a>  
+           <a href="http://bit.ly/apocalipse-ilustrado-cap-02" target=pdf class="bot-cap">Capítulo 2 <i class="fas fa-download"></i></a>  
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="capitulo3/3.pdf" download class="bot-cap">Capítulo 3 <i class="fas fa-download"></i></a> 
+           <a href="http://bit.ly/apocalipse-ilustrado-cap-03" target=pdf class="bot-cap">Capítulo 3 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="capitulo4/4.pdf" download class="bot-cap">Capítulo 4 <i class="fas fa-download"></i></a> 
+           <a href="http://bit.ly/apocalipse-ilustrado-cap-04" target=pdf class="bot-cap">Capítulo 4 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="capitulo5/5.pdf" download class="bot-cap">Capítulo 5 <i class="fas fa-download"></i></a>  
+           <a href="http://bit.ly/apocalipse-ilustrado-cap-05" target=pdf class="bot-cap">Capítulo 5 <i class="fas fa-download"></i></a>  
         </div>
              <div class="col-md-3 col-sm-12">
-           <a href="capitulo6/6.pdf" download class="bot-cap">Capítulo 6 <i class="fas fa-download"></i></a> 
+           <a href="http://bit.ly/apocalipse-ilustrado-cap-06" target=pdf class="bot-cap">Capítulo 6 <i class="fas fa-download"></i></a> 
         </div>
              <div class="col-md-3 col-sm-12">
-           <a href="capitulo7/7.pdf" download class="bot-cap">Capítulo 7 <i class="fas fa-download"></i></a>  
+           <a href="http://bit.ly/apocalipse-ilustrado-cap-07" target=pdf class="bot-cap">Capítulo 7 <i class="fas fa-download"></i></a>  
         </div>
         <div class="col-md-3 col-sm-12">
-           <a href="capitulo8/8.pdf" download class="bot-cap">Capítulo 8 <i class="fas fa-download"></i></a> 
+           <a href="http://bit.ly/apocalipse-ilustrado-cap-08" target=pdf class="bot-cap">Capítulo 8 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="capitulo9/9.pdf" download class="bot-cap">Capítulo 9 <i class="fas fa-download"></i></a> 
+           <a href="http://bit.ly/apocalipse-ilustrado-cap-09" target=pdf class="bot-cap">Capítulo 9 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="capitulo10/10.pdf" download class="bot-cap">Capítulo 10 <i class="fas fa-download"></i></a> 
+           <a href="http://bit.ly/apocalipse-ilustrado-cap-10" target=pdf class="bot-cap">Capítulo 10 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="capitulo11/11.pdf" download class="bot-cap">Capítulo 11 <i class="fas fa-download"></i></a> 
+           <a href="http://bit.ly/apocalipse-ilustrado-cap-11" target=pdf class="bot-cap">Capítulo 11 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="capitulo12/12.pdf" download class="bot-cap">Capítulo 12 <i class="fas fa-download"></i></a> 
+           <a href="http://bit.ly/apocalipse-ilustrado-cap-12" target=pdf class="bot-cap">Capítulo 12 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="capitulo13/13.pdf" download class="bot-cap">Capítulo 13 <i class="fas fa-download"></i></a> 
+           <a href="http://bit.ly/apocalipse-ilustrado-cap-13" target=pdf class="bot-cap">Capítulo 13 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="capitulo14/14.pdf" download class="bot-cap">Capítulo 14 <i class="fas fa-download"></i></a> 
+           <a href="http://bit.ly/apocalipse-ilustrado-cap-14" target=pdf class="bot-cap">Capítulo 14 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="capitulo15/15.pdf" download class="bot-cap">Capítulo 15 <i class="fas fa-download"></i></a> 
+           <a href="http://bit.ly/apocalipse-ilustrado-cap-15" target=pdf class="bot-cap">Capítulo 15 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="capitulo16/16.pdf" download class="bot-cap">Capítulo 16 <i class="fas fa-download"></i></a> 
+           <a href="http://bit.ly/apocalipse-ilustrado-cap-16" target=pdf class="bot-cap">Capítulo 16 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="capitulo17/17.pdf" download class="bot-cap">Capítulo 17 <i class="fas fa-download"></i></a> 
+           <a href="http://bit.ly/apocalipse-ilustrado-cap-17" target=pdf class="bot-cap">Capítulo 17 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="capitulo18/18.pdf" download class="bot-cap">Capítulo 18 <i class="fas fa-download"></i></a> 
+           <a href="http://bit.ly/apocalipse-ilustrado-cap-18" target=pdf class="bot-cap">Capítulo 18 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="capitulo19/19.pdf" download class="bot-cap">Capítulo 19 <i class="fas fa-download"></i></a> 
+           <a href="http://bit.ly/apocalipse-ilustrado-cap-19" target=pdf class="bot-cap">Capítulo 19 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="capitulo20/20.pdf" download class="bot-cap">Capítulo 20 <i class="fas fa-download"></i></a> 
+           <a href="http://bit.ly/apocalipse-ilustrado-cap-20" target=pdf class="bot-cap">Capítulo 20 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="capitulo21/21.pdf" download class="bot-cap">Capítulo 21 <i class="fas fa-download"></i></a> 
+           <a href="http://bit.ly/apocalipse-ilustrado-cap-21" target=pdf class="bot-cap">Capítulo 21 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="capitulo22/22.pdf" download class="bot-cap">Capítulo 22 <i class="fas fa-download"></i></a> 
+           <a href="http://bit.ly/apocalipse-ilustrado-cap-22" target=pdf class="bot-cap">Capítulo 22 <i class="fas fa-download"></i></a> 
         </div>
     
           
@@ -132,5 +132,17 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+
+
+    <script type="text/rocketscript">
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-50196377-2', 'advertenciafinal.com.br');
+			ga('send', 'pageview');
+
+		</script>
   </body>
 </html>
