renomeado nomes dos PDF

--- a/pt_BR/download.html
+++ b/pt_BR/download.html
@@ -50,70 +50,70 @@
           <h1>Download</h1>
       <div class="row text-center">
         <div class="col-md-3 col-sm-12">
-           <a href="http://bit.ly/apocalipse-ilustrado-cap-01" target=pdf class="bot-cap"> Capítulo 1  <i class="fas fa-download"></i></a> 
+           <a href="https://github.com/ministerioquartoanjo/apocalipse-ilustrado/raw/master/pt_BR/capitulo1/apocalipse-ilustrado-capitulo-1.pdf" target=pdf class="bot-cap"> Capítulo 1  <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="http://bit.ly/apocalipse-ilustrado-cap-02" target=pdf class="bot-cap">Capítulo 2 <i class="fas fa-download"></i></a>  
+           <a href="https://github.com/ministerioquartoanjo/apocalipse-ilustrado/raw/master/pt_BR/capitulo2/apocalipse-ilustrado-capitulo-2.pdf" target=pdf class="bot-cap">Capítulo 2 <i class="fas fa-download"></i></a>  
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="http://bit.ly/apocalipse-ilustrado-cap-03" target=pdf class="bot-cap">Capítulo 3 <i class="fas fa-download"></i></a> 
+           <a href="https://github.com/ministerioquartoanjo/apocalipse-ilustrado/raw/master/pt_BR/capitulo3/apocalipse-ilustrado-capitulo-3.pdf" target=pdf class="bot-cap">Capítulo 3 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="http://bit.ly/apocalipse-ilustrado-cap-04" target=pdf class="bot-cap">Capítulo 4 <i class="fas fa-download"></i></a> 
+           <a href="https://github.com/ministerioquartoanjo/apocalipse-ilustrado/raw/master/pt_BR/capitulo4/apocalipse-ilustrado-capitulo-4.pdf" target=pdf class="bot-cap">Capítulo 4 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="http://bit.ly/apocalipse-ilustrado-cap-05" target=pdf class="bot-cap">Capítulo 5 <i class="fas fa-download"></i></a>  
+           <a href="https://github.com/ministerioquartoanjo/apocalipse-ilustrado/raw/master/pt_BR/capitulo5/apocalipse-ilustrado-capitulo-5.pdf" target=pdf class="bot-cap">Capítulo 5 <i class="fas fa-download"></i></a>  
         </div>
              <div class="col-md-3 col-sm-12">
-           <a href="http://bit.ly/apocalipse-ilustrado-cap-06" target=pdf class="bot-cap">Capítulo 6 <i class="fas fa-download"></i></a> 
+           <a href="https://github.com/ministerioquartoanjo/apocalipse-ilustrado/raw/master/pt_BR/capitulo6/apocalipse-ilustrado-capitulo-6.pdf" target=pdf class="bot-cap">Capítulo 6 <i class="fas fa-download"></i></a> 
         </div>
              <div class="col-md-3 col-sm-12">
-           <a href="http://bit.ly/apocalipse-ilustrado-cap-07" target=pdf class="bot-cap">Capítulo 7 <i class="fas fa-download"></i></a>  
+           <a href="https://github.com/ministerioquartoanjo/apocalipse-ilustrado/raw/master/pt_BR/capitulo7/apocalipse-ilustrado-capitulo-7.pdf" target=pdf class="bot-cap">Capítulo 7 <i class="fas fa-download"></i></a>  
         </div>
         <div class="col-md-3 col-sm-12">
-           <a href="http://bit.ly/apocalipse-ilustrado-cap-08" target=pdf class="bot-cap">Capítulo 8 <i class="fas fa-download"></i></a> 
+           <a href="https://github.com/ministerioquartoanjo/apocalipse-ilustrado/raw/master/pt_BR/capitulo8/apocalipse-ilustrado-capitulo-8.pdf" target=pdf class="bot-cap">Capítulo 8 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="http://bit.ly/apocalipse-ilustrado-cap-09" target=pdf class="bot-cap">Capítulo 9 <i class="fas fa-download"></i></a> 
+           <a href="https://github.com/ministerioquartoanjo/apocalipse-ilustrado/raw/master/pt_BR/capitulo9/apocalipse-ilustrado-capitulo-9.pdf" target=pdf class="bot-cap">Capítulo 9 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="http://bit.ly/apocalipse-ilustrado-cap-10" target=pdf class="bot-cap">Capítulo 10 <i class="fas fa-download"></i></a> 
+           <a href="https://github.com/ministerioquartoanjo/apocalipse-ilustrado/raw/master/pt_BR/capitulo10/apocalipse-ilustrado-capitulo-10.pdf" target=pdf class="bot-cap">Capítulo 10 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="http://bit.ly/apocalipse-ilustrado-cap-11" target=pdf class="bot-cap">Capítulo 11 <i class="fas fa-download"></i></a> 
+           <a href="https://github.com/ministerioquartoanjo/apocalipse-ilustrado/raw/master/pt_BR/capitulo11/apocalipse-ilustrado-capitulo-11.pdf" target=pdf class="bot-cap">Capítulo 11 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="http://bit.ly/apocalipse-ilustrado-cap-12" target=pdf class="bot-cap">Capítulo 12 <i class="fas fa-download"></i></a> 
+           <a href="https://github.com/ministerioquartoanjo/apocalipse-ilustrado/raw/master/pt_BR/capitulo12/apocalipse-ilustrado-capitulo-12.pdf" target=pdf class="bot-cap">Capítulo 12 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="http://bit.ly/apocalipse-ilustrado-cap-13" target=pdf class="bot-cap">Capítulo 13 <i class="fas fa-download"></i></a> 
+           <a href="https://github.com/ministerioquartoanjo/apocalipse-ilustrado/raw/master/pt_BR/capitulo13/apocalipse-ilustrado-capitulo-13.pdf" target=pdf class="bot-cap">Capítulo 13 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="http://bit.ly/apocalipse-ilustrado-cap-14" target=pdf class="bot-cap">Capítulo 14 <i class="fas fa-download"></i></a> 
+           <a href="https://github.com/ministerioquartoanjo/apocalipse-ilustrado/raw/master/pt_BR/capitulo14/apocalipse-ilustrado-capitulo-14.pdf" target=pdf class="bot-cap">Capítulo 14 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="http://bit.ly/apocalipse-ilustrado-cap-15" target=pdf class="bot-cap">Capítulo 15 <i class="fas fa-download"></i></a> 
+           <a href="https://github.com/ministerioquartoanjo/apocalipse-ilustrado/raw/master/pt_BR/capitulo15/apocalipse-ilustrado-capitulo-15.pdf" target=pdf class="bot-cap">Capítulo 15 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="http://bit.ly/apocalipse-ilustrado-cap-16" target=pdf class="bot-cap">Capítulo 16 <i class="fas fa-download"></i></a> 
+           <a href="https://github.com/ministerioquartoanjo/apocalipse-ilustrado/raw/master/pt_BR/capitulo16/apocalipse-ilustrado-capitulo-16.pdf" target=pdf class="bot-cap">Capítulo 16 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="http://bit.ly/apocalipse-ilustrado-cap-17" target=pdf class="bot-cap">Capítulo 17 <i class="fas fa-download"></i></a> 
+           <a href="https://github.com/ministerioquartoanjo/apocalipse-ilustrado/raw/master/pt_BR/capitulo17/apocalipse-ilustrado-capitulo-17.pdf" target=pdf class="bot-cap">Capítulo 17 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="http://bit.ly/apocalipse-ilustrado-cap-18" target=pdf class="bot-cap">Capítulo 18 <i class="fas fa-download"></i></a> 
+           <a href="https://github.com/ministerioquartoanjo/apocalipse-ilustrado/raw/master/pt_BR/capitulo18/apocalipse-ilustrado-capitulo-18.pdf" target=pdf class="bot-cap">Capítulo 18 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="http://bit.ly/apocalipse-ilustrado-cap-19" target=pdf class="bot-cap">Capítulo 19 <i class="fas fa-download"></i></a> 
+           <a href="https://github.com/ministerioquartoanjo/apocalipse-ilustrado/raw/master/pt_BR/capitulo19/apocalipse-ilustrado-capitulo-19.pdf" target=pdf class="bot-cap">Capítulo 19 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="http://bit.ly/apocalipse-ilustrado-cap-20" target=pdf class="bot-cap">Capítulo 20 <i class="fas fa-download"></i></a> 
+           <a href="https://github.com/ministerioquartoanjo/apocalipse-ilustrado/raw/master/pt_BR/capitulo20/apocalipse-ilustrado-capitulo-20.pdf" target=pdf class="bot-cap">Capítulo 20 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="http://bit.ly/apocalipse-ilustrado-cap-21" target=pdf class="bot-cap">Capítulo 21 <i class="fas fa-download"></i></a> 
+           <a href="https://github.com/ministerioquartoanjo/apocalipse-ilustrado/raw/master/pt_BR/capitulo21/apocalipse-ilustrado-capitulo-21.pdf" target=pdf class="bot-cap">Capítulo 21 <i class="fas fa-download"></i></a> 
         </div>
           <div class="col-md-3 col-sm-12">
-           <a href="http://bit.ly/apocalipse-ilustrado-cap-22" target=pdf class="bot-cap">Capítulo 22 <i class="fas fa-download"></i></a> 
+           <a href="https://github.com/ministerioquartoanjo/apocalipse-ilustrado/raw/master/pt_BR/capitulo22/apocalipse-ilustrado-capitulo-22.pdf" target=pdf class="bot-cap">Capítulo 22 <i class="fas fa-download"></i></a> 
         </div>
     
           
